<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">RoadTrip</string>
    <string name="newtripname">Trip Name</string>
    <string name="add_new_contact">Add Contact</string>
    <string name="ok">OK</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="trip_list">Trip List</string>
    <string name="additem">Add New Item</string>
    <string name="itemname">Item Name</string>
    <string name="description">Description</string>
    <string name="saveandreturn">Save and Return</string>
    <string name="quantity">Quantity</string>
    <string name="contact_list">Contact List</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">e-mail</string>
    <string name="button_calculate">Calculate!</string>
    <string name="send_email">Send email</string>
    <string name="add_android_contact">Add Android Contact</string>
</resources>
