<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bars" >

        <Button
            android:id="@+id/ok_item"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            android:text="@string/ok" 
            android:background="@drawable/custom_button" />

        <EditText
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/itemname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/itemname" />

        <EditText
            android:layout_marginLeft="5dp"
            android:id="@+id/description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/itemname"
            android:hint="@string/description" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/layout_bottom" >

            <ListView
                android:id="@+id/android:list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_alignParentTop="true">
            </ListView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/bars" 
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/button_save_return"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/saveandreturn" 
                android:background="@drawable/custom_button" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>