<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_big" 
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:weightSum="75"
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@+id/imageViewLogo"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25" >

                <Button
                    android:id="@+id/button_add_new_trip"
                    android:layout_width="140dp"
            		android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/add_new_trip" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="25" >

                <Button
                    android:id="@+id/button_trip_list"
                    android:layout_width="140dp"
            android:layout_height="60dp"
                    android:layout_below="@id/button_add_new_trip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/trip_list" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="25" >

                <Button
                    android:id="@+id/button_contact_list"
                   	android:layout_width="140dp"
            		android:layout_height="60dp"
                    android:layout_below="@id/button_trip_list"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/contact_list" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>